--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,42 @@
+/*Fuentes*/
+@font-face {
+    font-family: 'Poppins';
+    src: url(../fonts/Poppins/Poppins-Regular.ttf);
+}
+
+@font-face {
+    font-family: 'Atkinson';
+    src: url(../fonts/Atkinson/AtkinsonHyperlegible-Regular.ttf);
+}
+
+:root{
+    --primary-font: normal 800 1rem/1.1rem 'Poppins';
+    --secondary-font: normal 800 .7rem/1rem 'Atkinson';
+}
+
+/*Cuerpo en general*/
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font: var(--primary-font);
+    outline: none!important;
+    font-size: 2.5rem;
 }
 
 body{
     background-color: #0e0e0e;
+    height: 200vh;
+}
+
+/*Header*/
+header{
+    display: flex;
+    height: 100vh;
 }
 
 div.video-bg > video{
+    position: absolute;
     width: 100%;
     height: 100vh;
     object-fit: cover;
@@ -25,4 +53,28 @@ div.video-bg::before{
     position: absolute;
     top: 0;
     left: 0;
+}
+
+/* Titulo */
+header .title-container{
+    position: relative;
+    z-index: 3;
+    padding: 0 10%;
+    font-weight: 800;
+}
+
+header .title-container h1 {
+    align-self: center;
+    font-weight: 800;
+    font-size: 10vw;
+    color: #fff;
+    line-height: 1;
+    text-transform: uppercase;
+}
+
+header .title-container p{
+    font: var(--primary-font);
+    font-size: 20px;
+    text-indent: 5px;
+    color: #01f7b6;
 }
