--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /*Fuentes*/
+
 @font-face {
     font-family: 'Poppins';
     src: url(../fonts/Poppins/Poppins-Regular.ttf);
@@ -9,12 +10,14 @@
     src: url(../fonts/Atkinson/AtkinsonHyperlegible-Regular.ttf);
 }
 
-:root{
+:root {
     --primary-font-family: 'Poppins';
     --secondary-font-family: 'Atkinson';
 }
 
+
 /*Cuerpo en general*/
+
 * {
     margin: 0;
     padding: 0;
@@ -23,18 +26,20 @@
     outline: none!important;
 }
 
-body{
+body {
     background-color: #0e0e0e;
 }
 
+
 /*Header*/
-header{
+
+header {
     display: flex;
     height: 100vh;
     overflow: hidden;
 }
 
-div.video-bg > video{
+div.video-bg>video {
     position: absolute;
     width: 100%;
     height: 100vh;
@@ -43,7 +48,7 @@ div.video-bg > video{
     opacity: 0.2;
 }
 
-div.video-bg::before{
+div.video-bg::before {
     content: '';
     background: url(../img/bg-lines.png) center;
     z-index: 2;
@@ -54,8 +59,10 @@ div.video-bg::before{
     left: 0;
 }
 
+
 /* Titulo */
-header .title-container{
+
+header .title-container {
     position: relative;
     align-self: center;
     height: fit-content;
@@ -76,14 +83,16 @@ header .title-container h1::first-line {
     line-height: .8;
 }
 
-header .title-container p{
+header .title-container p {
     font: var(--secondary-font-family);
     font-size: 20px;
     text-indent: 5px;
     color: #01f7b6;
 }
 
+
 /*Links contacto*/
+
 header .left-side {
     width: 100vh;
     height: 60px;
@@ -108,9 +117,27 @@ header .left-side ul li {
     list-style: none;
 }
 
-header .left-side ul li a{
+header .left-side ul li a {
+    position: relative;
     color: white;
-    text-decoration: underline transparent;
-    text-underline-offset: 10px;
+    text-decoration: none;
     font-size: 20px;
+}
+
+header .left-side ul li a::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 3px;
+    bottom: 0;
+    left: 0;
+    background-color: #fff;
+    transform: scaleX(0);
+    transform-origin: top left;
+    transition: transform 0.3s ease;
+}
+
+header .left-side ul li a:hover::before {
+    transform: scaleX(1);
 }
