--- a/css/style.css
+++ b/css/style.css
@@ -28,15 +28,21 @@
 
 body {
     background-color: #0e0e0e;
+    height: 200vh;
 }
-
-
 /*Header*/
 
 header {
     display: flex;
     height: 100vh;
     overflow: hidden;
+}
+
+div.video-bg {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100vh;
 }
 
 div.video-bg>video {
